Make navbar fixed to top. Unify main logo vertical alignment on wp and ckan

--- a/shared/scss/base/common/layout.scss
+++ b/shared/scss/base/common/layout.scss
@@ -14,23 +14,3 @@ body {
   margin: 0;
   background: $brand-background;
 }
-
-.container {
-  width: 100%;
-  margin: 0 auto;
-  padding-left: 0;
-  padding-right: 0;
-
-  @media (min-width: $width-sm) {
-    padding-left: $padding-base-horizontal*0.5;
-    padding-right: $padding-base-horizontal*0.5;
-  }
-
-  @media (min-width: $width-md) {
-    width: 960px;
-  }
-
-  @media (min-width: $width-lg) {
-    width: 1170px;
-  }
-}
